--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="0" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -31,7 +32,8 @@
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="15dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="1"/>
 
         <ImageView
             android:id="@+id/imageView3"
@@ -39,7 +41,8 @@
             android:layout_height="100dp"
             android:layout_margin="10dp"
             android:layout_marginLeft="15dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="2"/>
 
         <ImageView
             android:id="@+id/imageView4"
@@ -48,7 +51,8 @@
             android:layout_margin="10dp"
             android:layout_marginBottom="20dp"
             android:layout_marginTop="15dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="3"/>
 
         <ImageView
             android:id="@+id/imageView5"
@@ -57,7 +61,8 @@
             android:layout_margin="10dp"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="4"/>
 
         <ImageView
             android:id="@+id/imageView6"
@@ -66,28 +71,32 @@
             android:layout_margin="10dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="15dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="5"/>
 
         <ImageView
             android:id="@+id/imageView7"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="6"/>
 
         <ImageView
             android:id="@+id/imageView8"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="7"/>
 
         <ImageView
             android:id="@+id/imageView9"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_margin="10dp"
-            android:onClick="dropIn" />
+            android:onClick="dropIn"
+            android:tag="8"/>
 
 
     </GridLayout>
